turn off undo-tree persistence

--- a/emacs.org
+++ b/emacs.org
@@ -610,6 +610,8 @@ fix for cursor color in clients falling back to the default theme [[http:emacs.s
 (add-to-list 'savehist-additional-variables 'search-ring)
 (add-to-list 'savehist-additional-variables 'regexp-search-ring)
 
+(setq undo-tree-auto-save-history nil) ;; saving the undo-tree acts weird on startup, don't use it.
+
 (setq kill-ring-max 1000)
 
 (when (eq system-type 'gnu/linux)
