--- a/emacs.org
+++ b/emacs.org
@@ -1572,6 +1572,59 @@ If the server is connected and a prefix arg is provided, then invoke a quick /ms
 (add-to-list 'org-emphasis-alist '("+" (:strike-through t :inherit shadow)))
 #+END_SRC
 
+customize speed commands
+#+BEGIN_SRC emacs-lisp
+(setq org-speed-commands-default '(("turned off")))
+
+(setq org-speed-commands-user
+  '(("navigation")
+    ("n" . (org-speed-move-safe 'org-next-visible-heading))
+    ("p" . (org-speed-move-safe 'org-previous-visible-heading))
+    ("f" . (org-speed-move-safe 'org-forward-heading-same-level))
+    ("b" . (org-speed-move-safe 'org-backward-heading-same-level))
+    ("u" . (org-speed-move-safe 'outline-up-heading))
+    ("*" . org-display-outline-path)
+    ("o" . org-open-at-point)
+    ("s" . org-toggle-narrow-to-subtree)
+    ("w" . widen)
+    ("/" . org-sparse-tree)
+
+    ("move subtrees around")
+    ("@" . org-mark-subtree)
+    ("W" . org-cut-subtree)
+    ("U" . org-metaup)
+    ("D" . org-metadown)
+    ("r" . org-metaright)
+    ("l" . org-metaleft)
+    ("R" . org-shiftmetaright)
+    ("L" . org-shiftmetaleft)
+
+    ("todo tasks")
+    ("t" . org-todo)
+    ("," . (org-priority))
+    ("0" . (org-priority ?\ ))
+    ("1" . (org-priority ?A))
+    ("2" . (org-priority ?B))
+    ("3" . (org-priority ?C))
+    (":" . org-set-tags-command)
+    ("e" . org-set-effort)
+    ("E" . org-inc-effort)
+    ("I" . org-clock-in)
+    ("O" . org-clock-out)
+
+    ("agenda")
+    ("a" . org-agenda)
+    ("A" . jw-org-agenda)
+    ("<" . (org-agenda-set-restriction-lock 'subtree))
+    (">" . (org-agenda-remove-restriction-lock))
+
+    ("misc")
+    ("?" . org-speed-command-help)
+    )
+  )
+
+#+END_SRC
+
 org-babel languages & automatic yasnippet creation
 #+BEGIN_SRC emacs-lisp
 (defun org-babel-src-yasnippet (ob-lang &optional ob-src-header-override ob-src-header-additional-args)
