--- a/emacs.org
+++ b/emacs.org
@@ -65,6 +65,10 @@ This is a fix for http://elpa.gnu.org/packages/gnu-elpa-keyring-update.html. Can
 
 (use-package magit) ;; brings in transient
 
+(use-package transient
+  :config (setq transient-enable-popup-navigation t
+                transient-display-buffer-action '(display-buffer-below-selected)))
+
 (use-package browse-at-remote)
 
 (use-package gist)
@@ -1327,7 +1331,7 @@ terminal additions
     (jw--file-write file-contents file-location)))
 #+END_SRC
 
-** git
+** magit
 
 #+BEGIN_SRC emacs-lisp
 (defalias 'git-browse-at-remote 'browse-at-remote)
@@ -1336,10 +1340,7 @@ terminal additions
 ;; magit works faster with the full path to git instead of just "git". https://magit.vc/manual/magit/MacOS-Performance.html
 ;; also, use-package magit tries to set this before jw-env-set is called, pointing it to a different git.
 (setq magit-git-executable (executable-find "git"))
-
 (setq magit-define-global-key-bindings nil)
-(setq transient-enable-popup-navigation t)
-(setq transient-display-buffer-action '(display-buffer-below-selected))
 
 (define-prefix-command 'jw-magit-map)
 (global-set-key (kbd "M-g") 'jw-magit-map)
@@ -1350,6 +1351,11 @@ terminal additions
 (define-key jw-magit-map (kbd "f") 'magit-file-dispatch)
 (define-key jw-magit-map (kbd "M-w") 'browse-at-remote)
 
+#+END_SRC
+
+** gist
+
+#+BEGIN_SRC emacs-lisp
 (setq gist-view-gist t)
 
 (defun gist-dwim (&optional arg)
@@ -1380,6 +1386,7 @@ terminal additions
 
 (define-key jw-keymap "p" 'gist-menu) ;; p = paste, in case more paste services are added to gist-menu
 (define-key dired-mode-map "@" 'dired-do-gist-dwim)
+
 #+END_SRC
 
 ** rcirc
