Fix scala & js cleanup functions

--- a/emacs.org
+++ b/emacs.org
@@ -2085,7 +2085,7 @@ very opinionated project development lifecycle commands, an alternative to proje
  :repl (lambda (arg) (sbt-command "console"))
  :cleanup (lambda (arg)
             (projectile-kill-buffers)
-            (jw--run-cmd "docker compose stop && docker compose -f rm" :kill-process-buffer t)))
+            (jw--run-cmd "docker compose stop" :kill-process-buffer t)))
 #+END_SRC
 
 support ammonite repl in org babel, requires `amm` command, or ammonite-repl
@@ -2176,9 +2176,9 @@ support ammonite repl in org babel, requires `amm` command, or ammonite-repl
  :last-command (lambda (arg) (jw-js-run-raw-command arg jw-js--last-command-global))
  :repl (lambda (arg) (jw-js-run-raw-command arg "node"))
  :cleanup (lambda (arg)
-            (if (jw-js--binci-p)
-                (jw--run-cmd "binci --cleanup" :after-process-finish (lambda (prod) (projectile-kill-buffers)))
-              (projectile-kill-buffers))))
+            (projectile-kill-buffers)
+            ;; (when (jw-js--binci-p) (jw--run-cmd "binci --cleanup" :kill-process-buffer t)) ;; todo -- this does't quite work for some reason
+            ))
 #+END_SRC
 
 support typescript in org babel
