--- a/emacs.org
+++ b/emacs.org
@@ -64,10 +64,7 @@ This is a fix for http://elpa.gnu.org/packages/gnu-elpa-keyring-update.html. Can
             (defalias 'describe-symbol 'helpful-symbol)))
 
 (use-package magit) ;; brings in transient
-
-(use-package transient
-  :config (setq transient-enable-popup-navigation t
-                transient-display-buffer-action '(display-buffer-below-selected)))
+(use-package transient)
 
 (use-package browse-at-remote)
 
@@ -1337,6 +1334,16 @@ terminal additions
 #+BEGIN_SRC emacs-lisp
 (defalias 'git-browse-at-remote 'browse-at-remote)
 (defalias 'github-browse-file 'browse-at-remote)
+
+(setq transient-enable-popup-navigation t)
+(setq transient-display-buffer-action '(display-buffer-below-selected))
+
+;; https://github.com/magit/transient/commit/bb056e7156b3d88f42770ec55e1a7447a95aca96
+;; https://github.com/magit/transient/commit/98d502023817aa06f3046ba89c7c5a856ed88c35
+;; todo revisit this after more transient changes hapen & the feature is more settled
+(define-key transient-popup-navigation-map (kbd "C-p") #'transient-backward-button)
+(define-key transient-popup-navigation-map (kbd "C-n") #'transient-forward-button)
+(define-key transient-popup-navigation-map (kbd "RET") #'transient-push-button)
 
 ;; magit works faster with the full path to git instead of just "git". https://magit.vc/manual/magit/MacOS-Performance.html
 ;; also, use-package magit tries to set this before jw-env-set is called, pointing it to a different git.
