--- a/emacs.org
+++ b/emacs.org
@@ -1608,7 +1608,7 @@ customize speed commands
 (setq org-speed-commands-default '(("turned off")))
 
 (setq org-speed-commands-user
-  '(("navigation")
+  '(("nav")
     ("f" . (org-speed-move-safe 'org-forward-heading-same-level))
     ("b" . (org-speed-move-safe 'org-backward-heading-same-level))
     ("*" . org-display-outline-path)
@@ -1616,25 +1616,21 @@ customize speed commands
     ("/" . org-sparse-tree)
     ("@" . org-mark-subtree)
     ("w" . org-cut-subtree)
+    ("<" . (org-agenda-set-restriction-lock 'subtree))
+    (">" . (org-agenda-remove-restriction-lock))
 
-    ("todo tasks")
+    ("todo")
     ("t" . org-todo)
+    (":" . org-set-tags-command)
+    ("I" . org-clock-in)
+    ("O" . org-clock-out)
     ("," . (org-priority))
     ("0" . (org-priority ?\ ))
     ("1" . (org-priority ?A))
     ("2" . (org-priority ?B))
     ("3" . (org-priority ?C))
-    (":" . org-set-tags-command)
     ("e" . org-set-effort)
     ("E" . org-inc-effort)
-    ("I" . org-clock-in)
-    ("O" . org-clock-out)
-
-    ("agenda")
-    ("a" . org-agenda)
-    ("A" . jw-org-agenda)
-    ("<" . (org-agenda-set-restriction-lock 'subtree))
-    (">" . (org-agenda-remove-restriction-lock))
 
     ("misc")
     ("?" . org-speed-command-help)
