--- a/emacs.org
+++ b/emacs.org
@@ -1003,6 +1003,8 @@ argument makes the windows rotate backwards."
                (set-window-start w2 s1)
                (setq i next-i)))))))
 
+(defalias 'find-file-external 'counsel-find-file-extern) ;; no need to re-invent the wheel here
+
 (defun dired-hide-subdir-dwim (arg)
   (interactive "P")
   (save-excursion (if arg (dired-hide-all) (dired-hide-subdir 1))))
@@ -1015,6 +1017,11 @@ argument makes the windows rotate backwards."
 (defun dired-do-kill-subdir-dwim ()
   (interactive)
   (dired-do-kill-line-dwim 1))
+
+(defun dired-find-file-external ()
+  (interactive)
+  (dolist (f (dired-get-marked-files))
+    (find-file-external f)))
 
 (defun jw-narrow-dwim (arg)
   (interactive "P")
@@ -1128,6 +1135,7 @@ argument makes the windows rotate backwards."
 (define-key dired-mode-map (kbd "$") 'dired-hide-subdir-dwim)
 (define-key dired-mode-map (kbd "k") 'dired-do-kill-line-dwim)
 (define-key dired-mode-map (kbd "K") 'dired-do-kill-subdir-dwim)
+(define-key dired-mode-map (kbd "e") 'dired-find-file-external)
 (define-key narrow-map (kbd "r") 'narrow-to-region)
 (define-key narrow-map (kbd "n") 'jw-narrow-dwim)
 (define-key help-map (kbd "M-n") 'helpful-at-point)
@@ -1807,6 +1815,7 @@ hacky way of using org tables for markdown tables [[http://stackoverflow.com/que
 (define-key ivy-minibuffer-map (kbd "M-o") 'ivy-dispatching-done-ivy)
 (global-set-key (kbd "C-x C-f") 'counsel-find-file-dwim)
 (global-set-key (kbd "C-x f") 'pop-to-buffer)
+(global-set-key (kbd "C-x F") 'find-file-external)
 (global-set-key (kbd "C-x b") 'counsel-switch-buffer)
 (global-set-key (kbd "C-x C-b") 'ibuffer)
 (global-set-key (kbd "C-x E") 'counsel-kmacro)
